--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="">Home</a>
                 <a href="">About</a>
                 <a href="">Works</a>
-                <img src="images/icons/profile.png" alt="">
+                <a href=""><img src="images/icons/profile.png" alt=""></a>
             </span>
         </nav>
     </header>
